--- a/docs/index.tex
+++ b/docs/index.tex
@@ -109,7 +109,7 @@
 
 \title{Dataset manipulation API for tech.ml.dataset library}
 \author{GenerateMe}
-\date{2020-11-23}
+\date{2020-12-17}
 
 \begin{document}
 \maketitle
@@ -120,7 +120,7 @@
 \end{Highlighting}
 \end{Shaded}
 
-``5.00-beta-5''
+``5.00-beta-21''
 
 \hypertarget{introduction}{%
 \subsection{Introduction}\label{introduction}}
@@ -1055,7 +1055,7 @@ Rows as sequence of sequences
 \end{Shaded}
 
 \begin{verbatim}
-([#object[java.time.LocalDate 0x376bad45 "2012-01-01"] 0.0 12.8 5.0 4.7 "drizzle"] [#object[java.time.LocalDate 0x4dc5088d "2012-01-02"] 10.9 10.6 2.8 4.5 "rain"])
+([#object[java.time.LocalDate 0x51425298 "2012-01-01"] 0.0 12.8 5.0 4.7 "drizzle"] [#object[java.time.LocalDate 0x5f9c876 "2012-01-02"] 10.9 10.6 2.8 4.5 "rain"])
 \end{verbatim}
 
 \begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
@@ -1069,13 +1069,13 @@ Rows as sequence of maps
 \end{Shaded}
 
 \begin{verbatim}
-({"date" #object[java.time.LocalDate 0x3c5e32ca "2012-01-01"],
+({"date" #object[java.time.LocalDate 0x77ac2316 "2012-01-01"],
   "precipitation" 0.0,
   "temp_min" 5.0,
   "weather" "drizzle",
   "temp_max" 12.8,
   "wind" 4.7}
- {"date" #object[java.time.LocalDate 0x70437af3 "2012-01-02"],
+ {"date" #object[java.time.LocalDate 0x724e4a05 "2012-01-02"],
   "precipitation" 10.9,
   "temp_min" 2.8,
   "weather" "rain",
@@ -2861,7 +2861,7 @@ You can also pass mapping function with optional columns-selector
 \begin{longtable}[]{@{}llll@{}}
 \toprule
 v1 & v2 & {[}1 2 3{]} &
-\href{mailto:java.lang.Object@900448a}{\nolinkurl{java.lang.Object@900448a}}\tabularnewline
+\href{mailto:java.lang.Object@4a2418a3}{\nolinkurl{java.lang.Object@4a2418a3}}\tabularnewline
 \midrule
 \endhead
 1 & 1 & 0.5 & A\tabularnewline
@@ -2955,7 +2955,7 @@ Function works on grouped dataset
 \begin{longtable}[]{@{}llll@{}}
 \toprule
 v1 & v2 & {[}1 2 3{]} &
-\href{mailto:java.lang.Object@767055ad}{\nolinkurl{java.lang.Object@767055ad}}\tabularnewline
+\href{mailto:java.lang.Object@416103e}{\nolinkurl{java.lang.Object@416103e}}\tabularnewline
 \midrule
 \endhead
 1 & 1 & 0.5 & A\tabularnewline
@@ -2971,7 +2971,7 @@ v1 & v2 & {[}1 2 3{]} &
 \begin{longtable}[]{@{}llll@{}}
 \toprule
 v1 & v2 & {[}1 2 3{]} &
-\href{mailto:java.lang.Object@767055ad}{\nolinkurl{java.lang.Object@767055ad}}\tabularnewline
+\href{mailto:java.lang.Object@416103e}{\nolinkurl{java.lang.Object@416103e}}\tabularnewline
 \midrule
 \endhead
 2 & 2 & 1.0 & B\tabularnewline
@@ -3064,15 +3064,15 @@ Replace one column (column is trimmed)
 :V1 & :V2 & :V3 & :V4\tabularnewline
 \midrule
 \endhead
-0.2768 & 1 & 0.5 & A\tabularnewline
-0.05090 & 2 & 1.0 & B\tabularnewline
-0.5594 & 3 & 1.5 & C\tabularnewline
-0.7507 & 4 & 0.5 & A\tabularnewline
-0.3071 & 5 & 1.0 & B\tabularnewline
-0.9842 & 6 & 1.5 & C\tabularnewline
-0.7908 & 7 & 0.5 & A\tabularnewline
-0.09607 & 8 & 1.0 & B\tabularnewline
-0.8902 & 9 & 1.5 & C\tabularnewline
+0.6279 & 1 & 0.5 & A\tabularnewline
+0.3538 & 2 & 1.0 & B\tabularnewline
+0.2101 & 3 & 1.5 & C\tabularnewline
+0.8933 & 4 & 0.5 & A\tabularnewline
+0.5776 & 5 & 1.0 & B\tabularnewline
+0.5691 & 6 & 1.5 & C\tabularnewline
+0.4687 & 7 & 0.5 & A\tabularnewline
+0.1408 & 8 & 1.0 & B\tabularnewline
+0.9444 & 9 & 1.5 & C\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -3438,15 +3438,15 @@ map.
 :V1 & :V2 & :V3 & :V4\tabularnewline
 \midrule
 \endhead
-1 & 7 & 0.5 & A\tabularnewline
+1 & 8 & 0.5 & A\tabularnewline
+2 & 2 & 1.0 & B\tabularnewline
+1 & 9 & 1.5 & C\tabularnewline
+2 & 4 & 0.5 & A\tabularnewline
+1 & 6 & 1.0 & B\tabularnewline
+2 & 3 & 1.5 & C\tabularnewline
+1 & 5 & 0.5 & A\tabularnewline
 2 & 1 & 1.0 & B\tabularnewline
-1 & 4 & 1.5 & C\tabularnewline
-2 & 3 & 0.5 & A\tabularnewline
-1 & 2 & 1.0 & B\tabularnewline
-2 & 9 & 1.5 & C\tabularnewline
-1 & 6 & 0.5 & A\tabularnewline
-2 & 8 & 1.0 & B\tabularnewline
-1 & 5 & 1.5 & C\tabularnewline
+1 & 7 & 1.5 & C\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -3799,7 +3799,7 @@ Double array conversion.
 \end{Shaded}
 
 \begin{verbatim}
-#object["[J" 0x637b21f2 "[J@637b21f2"]
+#object["[J" 0x5517e139 "[J@5517e139"]
 \end{verbatim}
 
 \begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
@@ -3815,7 +3815,7 @@ Function also works on grouped dataset
 \end{Shaded}
 
 \begin{verbatim}
-(#object["[J" 0x73d571a1 "[J@73d571a1"] #object["[J" 0x2b7d9b11 "[J@2b7d9b11"] #object["[J" 0x523358ab "[J@523358ab"])
+(#object["[J" 0x37361bc1 "[J@37361bc1"] #object["[J" 0x2ec50f5c "[J@2ec50f5c"] #object["[J" 0x21612fea "[J@21612fea"])
 \end{verbatim}
 
 \begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
@@ -3830,8 +3830,8 @@ You can also cast the type to the other one (if casting is possible):
 \end{Shaded}
 
 \begin{verbatim}
-#object["[Ljava.lang.String;" 0x727a652f "[Ljava.lang.String;@727a652f"]
-#object["[F" 0x697e495b "[F@697e495b"]
+#object["[Ljava.lang.String;" 0x7aee9c39 "[Ljava.lang.String;@7aee9c39"]
+#object["[F" 0x61ea5554 "[F@61ea5554"]
 \end{verbatim}
 
 \hypertarget{rows}{%
@@ -4108,7 +4108,7 @@ Random row (single)
 :V1 & :V2 & :V3 & :V4\tabularnewline
 \midrule
 \endhead
-1 & 3 & 1.5 & C\tabularnewline
+2 & 6 & 1.5 & C\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -4150,15 +4150,15 @@ Random \texttt{n} (default: row count) rows with repetition.
 :V1 & :V2 & :V3 & :V4\tabularnewline
 \midrule
 \endhead
-1 & 1 & 0.5 & A\tabularnewline
-2 & 6 & 1.5 & C\tabularnewline
-1 & 5 & 1.0 & B\tabularnewline
-2 & 8 & 1.0 & B\tabularnewline
-2 & 6 & 1.5 & C\tabularnewline
 1 & 3 & 1.5 & C\tabularnewline
-1 & 7 & 0.5 & A\tabularnewline
-2 & 8 & 1.0 & B\tabularnewline
-2 & 4 & 0.5 & A\tabularnewline
+1 & 5 & 1.0 & B\tabularnewline
+1 & 5 & 1.0 & B\tabularnewline
+2 & 2 & 1.0 & B\tabularnewline
+1 & 1 & 0.5 & A\tabularnewline
+1 & 5 & 1.0 & B\tabularnewline
+1 & 1 & 0.5 & A\tabularnewline
+1 & 3 & 1.5 & C\tabularnewline
+2 & 2 & 1.0 & B\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -4180,10 +4180,10 @@ Five random rows with repetition
 \midrule
 \endhead
 1 & 3 & 1.5 & C\tabularnewline
+2 & 6 & 1.5 & C\tabularnewline
+2 & 6 & 1.5 & C\tabularnewline
+2 & 8 & 1.0 & B\tabularnewline
 1 & 3 & 1.5 & C\tabularnewline
-1 & 9 & 1.5 & C\tabularnewline
-2 & 2 & 1.0 & B\tabularnewline
-2 & 4 & 0.5 & A\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -4205,10 +4205,10 @@ Five random, non-repeating rows
 \midrule
 \endhead
 2 & 6 & 1.5 & C\tabularnewline
+1 & 7 & 0.5 & A\tabularnewline
+2 & 4 & 0.5 & A\tabularnewline
 1 & 3 & 1.5 & C\tabularnewline
-2 & 8 & 1.0 & B\tabularnewline
-1 & 9 & 1.5 & C\tabularnewline
-1 & 5 & 1.0 & B\tabularnewline
+2 & 2 & 1.0 & B\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -4254,15 +4254,15 @@ Shuffle dataset
 :V1 & :V2 & :V3 & :V4\tabularnewline
 \midrule
 \endhead
-1 & 5 & 1.0 & B\tabularnewline
-2 & 4 & 0.5 & A\tabularnewline
-2 & 6 & 1.5 & C\tabularnewline
+1 & 1 & 0.5 & A\tabularnewline
+1 & 3 & 1.5 & C\tabularnewline
 2 & 2 & 1.0 & B\tabularnewline
 1 & 7 & 0.5 & A\tabularnewline
-1 & 9 & 1.5 & C\tabularnewline
 2 & 8 & 1.0 & B\tabularnewline
-1 & 3 & 1.5 & C\tabularnewline
-1 & 1 & 0.5 & A\tabularnewline
+2 & 4 & 0.5 & A\tabularnewline
+1 & 5 & 1.0 & B\tabularnewline
+1 & 9 & 1.5 & C\tabularnewline
+2 & 6 & 1.5 & C\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -4440,21 +4440,21 @@ Select 5 random rows from each group
 :V1 & :V2 & :V3 & :V4\tabularnewline
 \midrule
 \endhead
-2 & 4 & 0.5 & A\tabularnewline
-1 & 7 & 0.5 & A\tabularnewline
-2 & 4 & 0.5 & A\tabularnewline
 1 & 1 & 0.5 & A\tabularnewline
-2 & 4 & 0.5 & A\tabularnewline
+1 & 1 & 0.5 & A\tabularnewline
+1 & 1 & 0.5 & A\tabularnewline
+1 & 7 & 0.5 & A\tabularnewline
+1 & 1 & 0.5 & A\tabularnewline
 1 & 5 & 1.0 & B\tabularnewline
-2 & 8 & 1.0 & B\tabularnewline
+1 & 5 & 1.0 & B\tabularnewline
+1 & 5 & 1.0 & B\tabularnewline
+1 & 5 & 1.0 & B\tabularnewline
 2 & 2 & 1.0 & B\tabularnewline
-2 & 8 & 1.0 & B\tabularnewline
-2 & 8 & 1.0 & B\tabularnewline
 1 & 9 & 1.5 & C\tabularnewline
-1 & 9 & 1.5 & C\tabularnewline
+1 & 3 & 1.5 & C\tabularnewline
 2 & 6 & 1.5 & C\tabularnewline
 1 & 3 & 1.5 & C\tabularnewline
-1 & 9 & 1.5 & C\tabularnewline
+2 & 6 & 1.5 & C\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -5246,7 +5246,7 @@ Random
 :V1 & :V2 & :V3 & :V4\tabularnewline
 \midrule
 \endhead
-2 & 8 & 1.0 & B\tabularnewline
+2 & 4 & 0.5 & A\tabularnewline
 1 & 9 & 1.5 & C\tabularnewline
 \bottomrule
 \end{longtable}
@@ -5566,7 +5566,7 @@ Missing values can be replaced using several strategies.
 \item
   column selector, default: \texttt{:all}
 \item
-  strategy, default: \texttt{:mid}
+  strategy, default: \texttt{:nearest}
 \item
   value (optional)
 
@@ -5594,10 +5594,14 @@ Strategies are:
   \texttt{:down} - copy values down and then up for missing values at
   the beginning
 \item
-  \texttt{:mid} - copy values around known values
+  \texttt{:mid} or \texttt{:nearest} - copy values around known values
+\item
+  \texttt{:midpoint} - use average value from previous and next
+  non-missing
 \item
   \texttt{:lerp} - trying to lineary approximate values, works for
-  numbers and datetime, otherwise applies \texttt{:mid}
+  numbers and datetime, otherwise applies \texttt{:nearest}. For numbers
+  always results in \texttt{float} datatype.
 \end{itemize}
 
 Let's define special dataset here:
@@ -5924,6 +5928,41 @@ The same applies for \texttt{:up} strategy which is opposite direction.
 
 \begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
 
+The same applies for \texttt{:up} strategy which is opposite direction.
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{(api/replace-missing DSm2 [}\AttributeTok{:a} \AttributeTok{:b}\NormalTok{] }\AttributeTok{:midpoint}\NormalTok{)}
+\end{Highlighting}
+\end{Shaded}
+
+\_unnamed {[}15 2{]}:
+
+\begin{longtable}[]{@{}ll@{}}
+\toprule
+:a & :b\tabularnewline
+\midrule
+\endhead
+1.0 & 2.0\tabularnewline
+1.0 & 2.0\tabularnewline
+1.0 & 2.0\tabularnewline
+1.0 & 7.5\tabularnewline
+2.0 & 7.5\tabularnewline
+3.0 & 7.5\tabularnewline
+3.0 & 7.5\tabularnewline
+3.0 & 7.5\tabularnewline
+3.0 & 7.5\tabularnewline
+3.0 & 13.0\tabularnewline
+4.0 & 8.0\tabularnewline
+7.5 & 3.0\tabularnewline
+11.0 & 4.0\tabularnewline
+11.0 & 5.0\tabularnewline
+11.0 & 5.0\tabularnewline
+\bottomrule
+\end{longtable}
+
+\begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
+
 We can use a function which is applied after applying \texttt{:up} or
 \texttt{:down}
 
@@ -5975,21 +6014,21 @@ Lerp tries to apply linear interpolation of the values
 :a & :b\tabularnewline
 \midrule
 \endhead
-1.00000000 & 2\tabularnewline
-1.00000000 & 2\tabularnewline
-1.00000000 & 2\tabularnewline
-1.00000000 & 4\tabularnewline
-2.00000000 & 5\tabularnewline
-2.33333333 & 7\tabularnewline
-2.66666667 & 8\tabularnewline
-3.00000000 & 10\tabularnewline
-3.33333333 & 11\tabularnewline
-3.66666667 & 13\tabularnewline
-4.00000000 & 8\tabularnewline
-7.50000000 & 3\tabularnewline
-11.00000000 & 4\tabularnewline
-11.00000000 & 5\tabularnewline
-11.00000000 & 5\tabularnewline
+1.00000000 & 2.00000000\tabularnewline
+1.00000000 & 2.00000000\tabularnewline
+1.00000000 & 2.00000000\tabularnewline
+1.00000000 & 3.57142857\tabularnewline
+2.00000000 & 5.14285714\tabularnewline
+2.33333333 & 6.71428571\tabularnewline
+2.66666667 & 8.28571429\tabularnewline
+3.00000000 & 9.85714286\tabularnewline
+3.33333333 & 11.42857143\tabularnewline
+3.66666667 & 13.00000000\tabularnewline
+4.00000000 & 8.00000000\tabularnewline
+7.50000000 & 3.00000000\tabularnewline
+11.00000000 & 4.00000000\tabularnewline
+11.00000000 & 5.00000000\tabularnewline
+11.00000000 & 5.00000000\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -8989,10 +9028,10 @@ data/anscombe.csv {[}44 3{]}:
 :x & :a & :b & :y1 & :y2 & :z1 & :z2\tabularnewline
 \midrule
 \endhead
-1 & 1 & 0 & 0.36088259 & 0.76836536 & 3 & -2\tabularnewline
-2 & 1 & 1 & 0.85659051 & 0.47780180 & 3 & -2\tabularnewline
-3 & 0 & 1 & 0.82399086 & 0.61098250 & 3 & -2\tabularnewline
-4 & 0 & 1 & 0.86091343 & 0.13300995 & 3 & -2\tabularnewline
+1 & 1 & 0 & 0.13417381 & 0.22293720 & 3 & -2\tabularnewline
+2 & 1 & 1 & 0.49675912 & 0.98428494 & 3 & -2\tabularnewline
+3 & 0 & 1 & 0.72803790 & 0.26411232 & 3 & -2\tabularnewline
+4 & 0 & 1 & 0.99837273 & 0.80129411 & 3 & -2\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -9010,14 +9049,14 @@ data/anscombe.csv {[}44 3{]}:
 :x & :a & :b & :times & y & z\tabularnewline
 \midrule
 \endhead
-1 & 1 & 0 & 1 & 0.36088259 & 3\tabularnewline
-2 & 1 & 1 & 1 & 0.85659051 & 3\tabularnewline
-3 & 0 & 1 & 1 & 0.82399086 & 3\tabularnewline
-4 & 0 & 1 & 1 & 0.86091343 & 3\tabularnewline
-1 & 1 & 0 & 2 & 0.76836536 & -2\tabularnewline
-2 & 1 & 1 & 2 & 0.47780180 & -2\tabularnewline
-3 & 0 & 1 & 2 & 0.61098250 & -2\tabularnewline
-4 & 0 & 1 & 2 & 0.13300995 & -2\tabularnewline
+1 & 1 & 0 & 1 & 0.13417381 & 3\tabularnewline
+2 & 1 & 1 & 1 & 0.49675912 & 3\tabularnewline
+3 & 0 & 1 & 1 & 0.72803790 & 3\tabularnewline
+4 & 0 & 1 & 1 & 0.99837273 & 3\tabularnewline
+1 & 1 & 0 & 2 & 0.22293720 & -2\tabularnewline
+2 & 1 & 1 & 2 & 0.98428494 & -2\tabularnewline
+3 & 0 & 1 & 2 & 0.26411232 & -2\tabularnewline
+4 & 0 & 1 & 2 & 0.80129411 & -2\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -11723,6 +11762,35 @@ asof-\textgreater{}= {[}3 4{]}:
 
 \begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
 
+\texttt{concat-copying} ensures all readers are evaluated.
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{(api/concat-copying ds1)}
+\end{Highlighting}
+\end{Shaded}
+
+\_unnamed {[}9 3{]}:
+
+\begin{longtable}[]{@{}lll@{}}
+\toprule
+:a & :b & :c\tabularnewline
+\midrule
+\endhead
+1 & 101 & a\tabularnewline
+2 & 102 & b\tabularnewline
+1 & 103 & s\tabularnewline
+2 & 104 &\tabularnewline
+3 & 105 & t\tabularnewline
+4 & 106 & r\tabularnewline
+& 107 & a\tabularnewline
+& 108 & c\tabularnewline
+4 & 109 & t\tabularnewline
+\bottomrule
+\end{longtable}
+
+\begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
+
 \begin{Shaded}
 \begin{Highlighting}[]
 \NormalTok{(api/concat ds1 (api/drop-columns ds2 }\AttributeTok{:d}\NormalTok{))}
@@ -11772,31 +11840,31 @@ null {[}27 4{]}:
 :V1 & :V2 & :V3 & :V4\tabularnewline
 \midrule
 \endhead
+1 & 3 & 1.5 & C\tabularnewline
+2 & 6 & 1.5 & C\tabularnewline
 1 & 5 & 1.0 & B\tabularnewline
-1 & 1 & 0.5 & A\tabularnewline
+2 & 2 & 1.0 & B\tabularnewline
 2 & 8 & 1.0 & B\tabularnewline
+2 & 4 & 0.5 & A\tabularnewline
+1 & 7 & 0.5 & A\tabularnewline
+2 & 6 & 1.5 & C\tabularnewline
+1 & 5 & 1.0 & B\tabularnewline
+1 & 3 & 1.5 & C\tabularnewline
+1 & 9 & 1.5 & C\tabularnewline
+1 & 3 & 1.5 & C\tabularnewline
+2 & 6 & 1.5 & C\tabularnewline
+2 & 2 & 1.0 & B\tabularnewline
 1 & 1 & 0.5 & A\tabularnewline
-1 & 1 & 0.5 & A\tabularnewline
-2 & 8 & 1.0 & B\tabularnewline
+1 & 7 & 0.5 & A\tabularnewline
 2 & 2 & 1.0 & B\tabularnewline
 2 & 6 & 1.5 & C\tabularnewline
-2 & 4 & 0.5 & A\tabularnewline
 1 & 9 & 1.5 & C\tabularnewline
-2 & 2 & 1.0 & B\tabularnewline
-2 & 2 & 1.0 & B\tabularnewline
-2 & 4 & 0.5 & A\tabularnewline
-2 & 4 & 0.5 & A\tabularnewline
-1 & 3 & 1.5 & C\tabularnewline
-1 & 9 & 1.5 & C\tabularnewline
-1 & 1 & 0.5 & A\tabularnewline
-1 & 7 & 0.5 & A\tabularnewline
-1 & 3 & 1.5 & C\tabularnewline
+2 & 6 & 1.5 & C\tabularnewline
+2 & 6 & 1.5 & C\tabularnewline
 1 & 5 & 1.0 & B\tabularnewline
 1 & 7 & 0.5 & A\tabularnewline
-2 & 4 & 0.5 & A\tabularnewline
 1 & 1 & 0.5 & A\tabularnewline
-2 & 2 & 1.0 & B\tabularnewline
-1 & 1 & 0.5 & A\tabularnewline
+2 & 6 & 1.5 & C\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -11854,15 +11922,15 @@ union {[}9 4{]}:
 :V1 & :V2 & :V3 & :V4\tabularnewline
 \midrule
 \endhead
+2 & 8 & 1.0 & B\tabularnewline
+2 & 2 & 1.0 & B\tabularnewline
+1 & 7 & 0.5 & A\tabularnewline
+2 & 4 & 0.5 & A\tabularnewline
+1 & 5 & 1.0 & B\tabularnewline
+1 & 1 & 0.5 & A\tabularnewline
 1 & 3 & 1.5 & C\tabularnewline
 1 & 9 & 1.5 & C\tabularnewline
-2 & 2 & 1.0 & B\tabularnewline
-1 & 5 & 1.0 & B\tabularnewline
-2 & 8 & 1.0 & B\tabularnewline
-1 & 7 & 0.5 & A\tabularnewline
 2 & 6 & 1.5 & C\tabularnewline
-2 & 4 & 0.5 & A\tabularnewline
-1 & 1 & 0.5 & A\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -12039,6 +12107,451 @@ difference {[}1 1{]}:
 110\tabularnewline
 \bottomrule
 \end{longtable}
+
+\hypertarget{split-into-traintest}{%
+\subsubsection{Split into train/test}\label{split-into-traintest}}
+
+In ML world very often you need to test given model and prepare
+collection of train and test datasets. \texttt{split} creates a lazy
+sequence of maps containing splitted dataset. Map contains two datasets
+under \texttt{:train} and \texttt{:test} keys.
+
+\texttt{split-type} can be one of the following:
+
+\begin{itemize}
+\tightlist
+\item
+  \texttt{:kfold} (default) - k-fold strategy, \texttt{:k} defines
+  number of folds (defaults to \texttt{5}), produces \texttt{k} splits
+\item
+  \texttt{:bootstrap} - \texttt{:ratio} defines ratio of observations
+  put into result (defaults to \texttt{1.0}), produces \texttt{1} split
+\item
+  \texttt{:holdout} - split into two parts with given ratio (defaults to
+  \texttt{2/3}), produces \texttt{1} split
+\item
+  \texttt{:loo} - leave one out, produces the same number of splits as
+  number of observations
+\end{itemize}
+
+Additionally you can provide:
+
+\begin{itemize}
+\tightlist
+\item
+  \texttt{:seed} - for random number generator
+\item
+  \texttt{:repeats} - repeat procedure \texttt{:repeats} times
+\item
+  \texttt{:partition-selector} - same as in \texttt{group-by} for
+  stratified splitting to reflect dataset structure in splits.
+\end{itemize}
+
+In case of grouped dataset each group is processed separately, pairs of
+grouped dataset are returned.
+
+See
+\href{https://www.mitpressjournals.org/doi/pdf/10.1162/EVCO_a_00069}{more}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{(}\BuiltInTok{def}\FunctionTok{ for-splitting }\NormalTok{(api/dataset (map-indexed (}\KeywordTok{fn}\NormalTok{ [id v] \{}\AttributeTok{:id}\NormalTok{ id}
+                                                        \AttributeTok{:partition}\NormalTok{ v}
+                                                        \AttributeTok{:group}\NormalTok{ (}\KeywordTok{rand-nth}\NormalTok{ [}\AttributeTok{:g1} \AttributeTok{:g2} \AttributeTok{:g3}\NormalTok{])\})}
+\NormalTok{                                             (}\KeywordTok{concat}\NormalTok{ (}\KeywordTok{repeat} \DecValTok{20} \AttributeTok{:a}\NormalTok{) (}\KeywordTok{repeat} \DecValTok{5} \AttributeTok{:b}\NormalTok{)))))}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{for-splitting}
+\end{Highlighting}
+\end{Shaded}
+
+\_unnamed {[}25 3{]}:
+
+\begin{longtable}[]{@{}lll@{}}
+\toprule
+:id & :partition & :group\tabularnewline
+\midrule
+\endhead
+0 & :a & :g3\tabularnewline
+1 & :a & :g3\tabularnewline
+2 & :a & :g3\tabularnewline
+3 & :a & :g3\tabularnewline
+4 & :a & :g3\tabularnewline
+5 & :a & :g2\tabularnewline
+6 & :a & :g2\tabularnewline
+7 & :a & :g1\tabularnewline
+8 & :a & :g1\tabularnewline
+9 & :a & :g1\tabularnewline
+10 & :a & :g2\tabularnewline
+11 & :a & :g2\tabularnewline
+12 & :a & :g2\tabularnewline
+13 & :a & :g2\tabularnewline
+14 & :a & :g2\tabularnewline
+15 & :a & :g3\tabularnewline
+16 & :a & :g2\tabularnewline
+17 & :a & :g1\tabularnewline
+18 & :a & :g3\tabularnewline
+19 & :a & :g1\tabularnewline
+20 & :b & :g2\tabularnewline
+21 & :b & :g3\tabularnewline
+22 & :b & :g1\tabularnewline
+23 & :b & :g2\tabularnewline
+24 & :b & :g3\tabularnewline
+\bottomrule
+\end{longtable}
+
+\hypertarget{k-fold}{%
+\paragraph{k-Fold}\label{k-fold}}
+
+Returns \texttt{k=5} maps
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{(}\KeywordTok{first}\NormalTok{ (api/split for-splitting))}
+\end{Highlighting}
+\end{Shaded}
+
+\{:train \_unnamed {[}20 3{]}:
+
+\begin{longtable}[]{@{}lll@{}}
+\toprule
+:id & :partition & :group\tabularnewline
+\midrule
+\endhead
+23 & :b & :g2\tabularnewline
+17 & :a & :g1\tabularnewline
+20 & :b & :g2\tabularnewline
+16 & :a & :g2\tabularnewline
+10 & :a & :g2\tabularnewline
+1 & :a & :g3\tabularnewline
+13 & :a & :g2\tabularnewline
+15 & :a & :g3\tabularnewline
+11 & :a & :g2\tabularnewline
+0 & :a & :g3\tabularnewline
+6 & :a & :g2\tabularnewline
+7 & :a & :g1\tabularnewline
+19 & :a & :g1\tabularnewline
+24 & :b & :g3\tabularnewline
+21 & :b & :g3\tabularnewline
+5 & :a & :g2\tabularnewline
+18 & :a & :g3\tabularnewline
+12 & :a & :g2\tabularnewline
+9 & :a & :g1\tabularnewline
+3 & :a & :g3\tabularnewline
+\bottomrule
+\end{longtable}
+
+, :test \_unnamed {[}5 3{]}:
+
+\begin{longtable}[]{@{}lll@{}}
+\toprule
+:id & :partition & :group\tabularnewline
+\midrule
+\endhead
+2 & :a & :g3\tabularnewline
+4 & :a & :g3\tabularnewline
+8 & :a & :g1\tabularnewline
+14 & :a & :g2\tabularnewline
+22 & :b & :g1\tabularnewline
+\bottomrule
+\end{longtable}
+
+\}
+
+Partition according to \texttt{:k} column to reflect it's distribution
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{(}\KeywordTok{first}\NormalTok{ (api/split for-splitting }\AttributeTok{:kfold}\NormalTok{ \{}\AttributeTok{:partition-selector} \AttributeTok{:partition}\NormalTok{\}))}
+\end{Highlighting}
+\end{Shaded}
+
+\{:train Train set, \_unnamed {[}20 3{]}:
+
+\begin{longtable}[]{@{}lll@{}}
+\toprule
+:id & :partition & :group\tabularnewline
+\midrule
+\endhead
+22 & :b & :g1\tabularnewline
+23 & :b & :g2\tabularnewline
+24 & :b & :g3\tabularnewline
+21 & :b & :g3\tabularnewline
+1 & :a & :g3\tabularnewline
+0 & :a & :g3\tabularnewline
+7 & :a & :g1\tabularnewline
+4 & :a & :g3\tabularnewline
+17 & :a & :g1\tabularnewline
+11 & :a & :g2\tabularnewline
+9 & :a & :g1\tabularnewline
+14 & :a & :g2\tabularnewline
+5 & :a & :g2\tabularnewline
+10 & :a & :g2\tabularnewline
+18 & :a & :g3\tabularnewline
+12 & :a & :g2\tabularnewline
+2 & :a & :g3\tabularnewline
+15 & :a & :g3\tabularnewline
+16 & :a & :g2\tabularnewline
+8 & :a & :g1\tabularnewline
+\bottomrule
+\end{longtable}
+
+, :test Test set, \_unnamed {[}5 3{]}:
+
+\begin{longtable}[]{@{}lll@{}}
+\toprule
+:id & :partition & :group\tabularnewline
+\midrule
+\endhead
+20 & :b & :g2\tabularnewline
+3 & :a & :g3\tabularnewline
+6 & :a & :g2\tabularnewline
+13 & :a & :g2\tabularnewline
+19 & :a & :g1\tabularnewline
+\bottomrule
+\end{longtable}
+
+\}
+
+\hypertarget{bootstrap}{%
+\paragraph{Bootstrap}\label{bootstrap}}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{(api/split for-splitting }\AttributeTok{:bootstrap}\NormalTok{)}
+\end{Highlighting}
+\end{Shaded}
+
+(\{:train \_unnamed {[}25 3{]}:
+
+\begin{longtable}[]{@{}lll@{}}
+\toprule
+:id & :partition & :group\tabularnewline
+\midrule
+\endhead
+4 & :a & :g3\tabularnewline
+10 & :a & :g2\tabularnewline
+19 & :a & :g1\tabularnewline
+9 & :a & :g1\tabularnewline
+4 & :a & :g3\tabularnewline
+1 & :a & :g3\tabularnewline
+24 & :b & :g3\tabularnewline
+7 & :a & :g1\tabularnewline
+10 & :a & :g2\tabularnewline
+19 & :a & :g1\tabularnewline
+13 & :a & :g2\tabularnewline
+12 & :a & :g2\tabularnewline
+9 & :a & :g1\tabularnewline
+6 & :a & :g2\tabularnewline
+0 & :a & :g3\tabularnewline
+9 & :a & :g1\tabularnewline
+17 & :a & :g1\tabularnewline
+8 & :a & :g1\tabularnewline
+0 & :a & :g3\tabularnewline
+9 & :a & :g1\tabularnewline
+17 & :a & :g1\tabularnewline
+9 & :a & :g1\tabularnewline
+2 & :a & :g3\tabularnewline
+16 & :a & :g2\tabularnewline
+15 & :a & :g3\tabularnewline
+\bottomrule
+\end{longtable}
+
+, :test \_unnamed {[}9 3{]}:
+
+\begin{longtable}[]{@{}lll@{}}
+\toprule
+:id & :partition & :group\tabularnewline
+\midrule
+\endhead
+3 & :a & :g3\tabularnewline
+5 & :a & :g2\tabularnewline
+11 & :a & :g2\tabularnewline
+14 & :a & :g2\tabularnewline
+18 & :a & :g3\tabularnewline
+20 & :b & :g2\tabularnewline
+21 & :b & :g3\tabularnewline
+22 & :b & :g1\tabularnewline
+23 & :b & :g2\tabularnewline
+\bottomrule
+\end{longtable}
+
+\})
+
+with repeats, to get 100 splits
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{(}\KeywordTok{count}\NormalTok{ (api/split for-splitting }\AttributeTok{:bootstrap}\NormalTok{ \{}\AttributeTok{:repeats} \DecValTok{100}\NormalTok{\}))}
+\end{Highlighting}
+\end{Shaded}
+
+100
+
+\hypertarget{holdout}{%
+\paragraph{Holdout}\label{holdout}}
+
+with small ratio
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{(api/split for-splitting }\AttributeTok{:holdout}\NormalTok{ \{}\AttributeTok{:ratio} \FloatTok{0.2}\NormalTok{\})}
+\end{Highlighting}
+\end{Shaded}
+
+(\{:train \_unnamed {[}5 3{]}:
+
+\begin{longtable}[]{@{}lll@{}}
+\toprule
+:id & :partition & :group\tabularnewline
+\midrule
+\endhead
+13 & :a & :g2\tabularnewline
+16 & :a & :g2\tabularnewline
+22 & :b & :g1\tabularnewline
+4 & :a & :g3\tabularnewline
+17 & :a & :g1\tabularnewline
+\bottomrule
+\end{longtable}
+
+, :test \_unnamed {[}20 3{]}:
+
+\begin{longtable}[]{@{}lll@{}}
+\toprule
+:id & :partition & :group\tabularnewline
+\midrule
+\endhead
+0 & :a & :g3\tabularnewline
+1 & :a & :g3\tabularnewline
+2 & :a & :g3\tabularnewline
+3 & :a & :g3\tabularnewline
+5 & :a & :g2\tabularnewline
+6 & :a & :g2\tabularnewline
+7 & :a & :g1\tabularnewline
+8 & :a & :g1\tabularnewline
+9 & :a & :g1\tabularnewline
+10 & :a & :g2\tabularnewline
+11 & :a & :g2\tabularnewline
+12 & :a & :g2\tabularnewline
+14 & :a & :g2\tabularnewline
+15 & :a & :g3\tabularnewline
+18 & :a & :g3\tabularnewline
+19 & :a & :g1\tabularnewline
+20 & :b & :g2\tabularnewline
+21 & :b & :g3\tabularnewline
+23 & :b & :g2\tabularnewline
+24 & :b & :g3\tabularnewline
+\bottomrule
+\end{longtable}
+
+\})
+
+\hypertarget{leave-one-out}{%
+\paragraph{Leave One Out}\label{leave-one-out}}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{(}\KeywordTok{count}\NormalTok{ (api/split for-splitting }\AttributeTok{:loo}\NormalTok{))}
+\end{Highlighting}
+\end{Shaded}
+
+25
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{(}\KeywordTok{first}\NormalTok{ (api/split for-splitting }\AttributeTok{:loo}\NormalTok{))}
+\end{Highlighting}
+\end{Shaded}
+
+\{:train \_unnamed {[}24 3{]}:
+
+\begin{longtable}[]{@{}lll@{}}
+\toprule
+:id & :partition & :group\tabularnewline
+\midrule
+\endhead
+20 & :b & :g2\tabularnewline
+18 & :a & :g3\tabularnewline
+8 & :a & :g1\tabularnewline
+24 & :b & :g3\tabularnewline
+2 & :a & :g3\tabularnewline
+17 & :a & :g1\tabularnewline
+1 & :a & :g3\tabularnewline
+10 & :a & :g2\tabularnewline
+12 & :a & :g2\tabularnewline
+0 & :a & :g3\tabularnewline
+7 & :a & :g1\tabularnewline
+4 & :a & :g3\tabularnewline
+15 & :a & :g3\tabularnewline
+21 & :b & :g3\tabularnewline
+6 & :a & :g2\tabularnewline
+3 & :a & :g3\tabularnewline
+11 & :a & :g2\tabularnewline
+22 & :b & :g1\tabularnewline
+19 & :a & :g1\tabularnewline
+5 & :a & :g2\tabularnewline
+14 & :a & :g2\tabularnewline
+9 & :a & :g1\tabularnewline
+23 & :b & :g2\tabularnewline
+13 & :a & :g2\tabularnewline
+\bottomrule
+\end{longtable}
+
+, :test \_unnamed {[}1 3{]}:
+
+\begin{longtable}[]{@{}lll@{}}
+\toprule
+:id & :partition & :group\tabularnewline
+\midrule
+\endhead
+16 & :a & :g2\tabularnewline
+\bottomrule
+\end{longtable}
+
+\}
+
+\hypertarget{grouped-dataset-with-partitioning}{%
+\paragraph{Grouped dataset with
+partitioning}\label{grouped-dataset-with-partitioning}}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{(}\KeywordTok{first}\NormalTok{ (}\KeywordTok{->}\NormalTok{ for-splitting}
+\NormalTok{           (api/group-by }\AttributeTok{:group}\NormalTok{)}
+\NormalTok{           (api/split }\AttributeTok{:bootstrap}\NormalTok{ \{}\AttributeTok{:partition-selector} \AttributeTok{:partition} \AttributeTok{:seed} \DecValTok{11} \AttributeTok{:ratio} \FloatTok{0.8}\NormalTok{\})))}
+\end{Highlighting}
+\end{Shaded}
+
+\{:train \_unnamed {[}3 3{]}:
+
+\begin{longtable}[]{@{}lll@{}}
+\toprule
+:name & :group-id & :data\tabularnewline
+\midrule
+\endhead
+:g1 & 0 & Train set, Group: :g1 {[}5 3{]}:\tabularnewline
+:g2 & 1 & Train set, Group: :g2 {[}9 3{]}:\tabularnewline
+:g3 & 2 & Train set, Group: :g3 {[}8 3{]}:\tabularnewline
+\bottomrule
+\end{longtable}
+
+, :test \_unnamed {[}3 3{]}:
+
+\begin{longtable}[]{@{}lll@{}}
+\toprule
+:name & :group-id & :data\tabularnewline
+\midrule
+\endhead
+:g1 & 0 & Test set, Group: :g1 {[}2 3{]}:\tabularnewline
+:g2 & 1 & Test set, Group: :g2 {[}4 3{]}:\tabularnewline
+:g3 & 2 & Test set, Group: :g3 {[}3 3{]}:\tabularnewline
+\bottomrule
+\end{longtable}
+
+\}
 
 \hypertarget{functions}{%
 \subsection{Functions}\label{functions}}
@@ -14029,9 +14542,9 @@ Other filters
 :V1 & :V2 & :V3 & :V4\tabularnewline
 \midrule
 \endhead
-2 & 4 & 0.5 & A\tabularnewline
+1 & 3 & 1.5 & C\tabularnewline
 1 & 1 & 0.5 & A\tabularnewline
-2 & 4 & 0.5 & A\tabularnewline
+1 & 9 & 1.5 & C\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -14048,11 +14561,11 @@ Other filters
 :V1 & :V2 & :V3 & :V4\tabularnewline
 \midrule
 \endhead
-1 & 1 & 0.5 & A\tabularnewline
-2 & 8 & 1.0 & B\tabularnewline
 2 & 6 & 1.5 & C\tabularnewline
 1 & 5 & 1.0 & B\tabularnewline
-2 & 8 & 1.0 & B\tabularnewline
+2 & 2 & 1.0 & B\tabularnewline
+1 & 9 & 1.5 & C\tabularnewline
+1 & 3 & 1.5 & C\tabularnewline
 \bottomrule
 \end{longtable}
 
