--- a/README.Rmd
+++ b/README.Rmd
@@ -50,7 +50,7 @@ knit_engines$set(clojure = function(options) {
 
 ### tech.ml.dataset 5.x (master branch)
 
-`[scicloj/tablecloth "5.00-beta-21a"]`
+`[scicloj/tablecloth "5.00-beta-25"]`
 
 ### tech.ml.dataset 4.x (4.0 branch)
 
