split and pipeline refector + tmd bump

--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -3311,7 +3311,10 @@ The same as `concat` but returns unique rows
 
 ### Split into train/test
 
-In ML world very often you need to test given model and prepare collection of train and test datasets. `split` creates a lazy sequence of maps containing splitted dataset. Map contains two datasets under `:train` and `:test` keys.
+In ML world very often you need to test given model and prepare collection of train and test datasets. `split` creates new dataset with two additional columns:
+
+* `:$split-name` - with `:train` or `:test` values
+* `:$split-id` - id of train/test pair
 
 `split-type` can be one of the following:
 
@@ -3325,8 +3328,10 @@ Additionally you can provide:
 * `:seed` - for random number generator
 * `:repeats` - repeat procedure `:repeats` times
 * `:partition-selector` - same as in `group-by` for stratified splitting to reflect dataset structure in splits.
+* `:split-col-name` - a column where name of split is stored, either `:train` or `:test` values (default: `:$split-name`)
+* `:split-id-col-name` - a column where id of the train/test pair is stored (default: `:$split-id`)
 
-In case of grouped dataset each group is processed separately, pairs of grouped dataset are returned.
+In case of grouped dataset each group is processed separately.
 
 See [more](https://www.mitpressjournals.org/doi/pdf/10.1162/EVCO_a_00069)
 
@@ -3346,13 +3351,17 @@ for-splitting
 Returns `k=5` maps
 
 ```{clojure results="asis"}
-(first (api/split for-splitting))
+(-> for-splitting
+    (api/split)
+    (api/head 30))
 ```
 
 Partition according to `:k` column to reflect it's distribution
 
 ```{clojure results="asis"}
-(first (api/split for-splitting :kfold {:partition-selector :partition}))
+(-> for-splitting
+    (api/split :kfold {:partition-selector :partition})
+    (api/head 30))
 ```
 
 #### Bootstrap
@@ -3364,7 +3373,11 @@ Partition according to `:k` column to reflect it's distribution
 with repeats, to get 100 splits
 
 ```{clojure results="asis"}
-(count (api/split for-splitting :bootstrap {:repeats 100}))
+(-> for-splitting
+    (api/split :bootstrap {:repeats 100})
+    (:$split-id)
+    (distinct)
+    (count))
 ```
 
 #### Holdout
@@ -3378,19 +3391,40 @@ with small ratio
 #### Leave One Out
 
 ```{clojure results="asis"}
-(count (api/split for-splitting :loo))
+(-> for-splitting
+    (api/split :loo)
+    (api/head 30))
 ```
 
 ```{clojure results="asis"}
-(first (api/split for-splitting :loo))
+(-> for-splitting
+    (api/split :loo)
+    (api/row-count))
 ```
 
 #### Grouped dataset with partitioning
 
 ```{clojure results="asis"}
-(first (-> for-splitting
-           (api/group-by :group)
-           (api/split :bootstrap {:partition-selector :partition :seed 11 :ratio 0.8})))
+(-> for-splitting
+    (api/group-by :group)
+    (api/split :bootstrap {:partition-selector :partition :seed 11 :ratio 0.8}))
+```
+
+#### Split as a sequence
+
+To get a sequence of pairs, use `split->seq` function
+
+```{clojure results="asis"}
+(-> for-splitting
+    (api/split->seq :kfold {:partition-selector :partition})
+    (first))
+```
+
+```{clojure results="asis"}
+(-> for-splitting
+    (api/group-by :group)
+    (api/split->seq :bootstrap {:partition-selector :partition :seed 11 :ratio 0.8 :repeats 2})
+    (first))
 ```
 
 ## Pipeline
@@ -3401,6 +3435,8 @@ There are two ways to create pipelines:
 
 * functional, as a composition of functions
 * declarative, separating task declarations and concrete parametrization.
+
+Pipeline operations are prepared to work with [metamorph](https://github.com/scicloj/metamorph) library. That means that result of the pipeline is wrapped into a map and dataset is stored under `:metamorph/data` key.
 
 ```{clojure results="hide"}
 (require '[tablecloth.pipeline :as pip])
@@ -3438,9 +3474,9 @@ To help keeping pipeline declaration as a pure data structure you can use namesp
 You can't used `type` and `!type` namespaces for a symbol reference, because they are reserved for column type selectors.
 
 ```{clojure results="hide"}
-(def pipeline-declaration [[:group-by :V1]
-                           [:unique-by ::unique-by-operation {:strategy :ctx/strategy}]
-                           [:ungroup {:add-group-as-column :from-V1}]])
+(def pipeline-declaration [[:pip/group-by :V1]
+                           [:pip/unique-by ::unique-by-operation {:strategy :ctx/strategy}]
+                           [:pip/ungroup {:add-group-as-column :from-V1}]])
 
 (def unique-by-operation (fn [m] (mod (:V2 m) 3)))
 
@@ -3458,7 +3494,7 @@ You can't used `type` and `!type` namespaces for a symbol reference, because the
 
 ### Custom operator
 
-Custom pipeline operator is just function which returns another function operating on a dataset.
+Custom pipeline operator is just function which returns another function operating on a dataset. If you want it to work with `metamorph` you have to use `metamorph/lift` function.
 
 ```{clojure results="hide"}
 (defn duplicate-columns
